--- a/django/accounts/templates/email/reset.html
+++ b/django/accounts/templates/email/reset.html
@@ -1,2 +1,2 @@
 <h1>{{ DOMAIN_NAME }}</h1>
-<p>Click here to reset your password <a href="https://{{ DOMAIN_NAME }}/reset/{{ KEY }}">link</a></p>
+<p>Click here to reset your password <a href="https://{{ DOMAIN_NAME }}/reset/{{ KEY }}">https://{{ DOMAIN_NAME }}/reset/{{ KEY }}</a></p>
